@@ -1,4 +1,6 @@
 ver 0.20 (not yet released)
+* protocol
+  - "commands" returns playlist commands only if playlist_directory configured
 * output
   - pulse: set channel map to WAVE-EX
 
